# rkik

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.claude/: settings.json
.github/workflows/: ci-test-n-build.yml  release.yaml
dev/test-env/: docker-compose.yml
dev/test-env/ptp-master/: Dockerfile  entrypoint.sh
docs/: NTS_IMPLEMENTATION_PLAN.md  NTS_USAGE.md  README.md  TEST_ENV.md  api_reference.md  cli_v2.md  developer-guide.md  developer_guide.md  index.md  packaging.md  plugin.md  user-guide.md  user_guide.md
scripts/: test-env-down.sh  test-env-up.sh
src/: error.rs  errors.rs  lib.rs  main.rs  stats.rs
src/adapters/: mod.rs  ntp_client.rs  nts_client.rs  ptp_client.rs  resolver.rs
src/cli/: args.rs
src/core/: compare.rs  mod.rs  mode.rs  query.rs
src/domain/: mod.rs  ntp.rs  ptp.rs
src/fmt/: csv.rs  json.rs  mod.rs  ptp_json.rs  ptp_text.rs  text.rs
src/ntp/: client.rs  mod.rs  model.rs  resolver.rs
src/output/: formatter.rs  writer.rs
src/services/: compare.rs  mod.rs  ptp_query.rs  query.rs
src/sync/: mod.rs  sync.rs
src/tui/: mod.rs
tests/: cli_test.rs  integration.rs  nts_test.rs  ptp_tests.rs
