[package]
name = "rkik"
version = "1.2.1"
edition = "2024"
description = "Rusty Klock Inspection Kit - NTP Query and Compare Tool"
authors = ["Aguacero7 <naps@teamnaps.fr>"]
license = "MIT"
repository = "https://github.com/aguacero7/rkik"
homepage = "https://github.com/aguacero7/rkik"
readme = "README.md"
keywords = ["ntp", "cli", "time", "network", "tool"]
categories = ["command-line-utilities", "network-programming"]
documentation = "https://docs.rs/rkik"
include = [ #for CI to not publish artifacts
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE*",
    "src/**",
    "docs/**"
]

[[bin]]
name = "rkik"
path = "src/bin/rkik.rs"
[features]
default = ["json", "sync", "nts", "ptp"]
json = ["serde", "serde_json"]
sync = ["libc"]
nts = ["rkik-nts"]
ptp = ["dep:statime", "dep:statime-linux"]
network-tests = []

[dependencies]
rsntp = "4.1.0"
clap = { version = "4.5.47", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
console = "0.16"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.143", optional = true }
thiserror = "2.0.16"
tracing = "0.1"
libc = { version = "0.2.175", optional = true }
rkik-nts = { version = "0.3.0", optional = true }
ratatui = "0.29"
crossterm = "0.28"

[target.'cfg(target_os = "linux")'.dependencies]
statime = { version = "0.3.0", optional = true }
statime-linux = { version = "0.3.0", optional = true }


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[package.metadata.deb]
maintainer = "Aguacero7 <naps@teamnaps.fr>"
depends = "libc6 (>= 2.29)"
section = "utils"
priority = "optional"
assets = [
    ["target/release/rkik", "usr/bin/", "755"]
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rkik", dest = "/usr/bin/rkik", mode = "755" }
]
license = "MIT"
summary = "Rusty Klock Inspection Kit"
